// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevsManagement should render component when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <section
        class="el-page-container"
      >
        <mock-styled.h1
          classname="el-text-base"
        >
          Developers
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="name"
                  type="search"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Developer Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="company"
                  type="search"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Company Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="gitHubUsername"
                  type="search"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Github Username
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="registeredFrom"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Registered From
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="registeredTo"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Registered To
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  Status
                </mock-styled.label>
                <mock-styled.div>
                  <mock-styled.select
                    name="status"
                  >
                    <option
                      value=""
                    >
                      Please Select
                    </option>
                    <option
                      value="incomplete"
                    >
                      Incomplete
                    </option>
                    <option
                      value="pending"
                    >
                      Pending
                    </option>
                    <option
                      value="confirmed"
                    >
                      Confirmed
                    </option>
                    <option
                      value="underReview"
                    >
                      Under Review
                    </option>
                    <option
                      value="removed"
                    >
                      Removed
                    </option>
                  </mock-styled.select>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <mock-styled.div
          classname=""
        >
          <mock-styled.div>
            <mock-styled.div />
          </mock-styled.div>
        </mock-styled.div>
      </section>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <section
      class="el-page-container"
    >
      <mock-styled.h1
        classname="el-text-base"
      >
        Developers
      </mock-styled.h1>
      <form>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="name"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Developer Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="company"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Company Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="gitHubUsername"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Github Username
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Status
              </mock-styled.label>
              <mock-styled.div>
                <mock-styled.select
                  name="status"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="incomplete"
                  >
                    Incomplete
                  </option>
                  <option
                    value="pending"
                  >
                    Pending
                  </option>
                  <option
                    value="confirmed"
                  >
                    Confirmed
                  </option>
                  <option
                    value="underReview"
                  >
                    Under Review
                  </option>
                  <option
                    value="removed"
                  >
                    Removed
                  </option>
                </mock-styled.select>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <mock-styled.div
        classname=""
      >
        <mock-styled.div>
          <mock-styled.div />
        </mock-styled.div>
      </mock-styled.div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DevsManagement should render component with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <mock-styled.div />
      <section
        class="el-page-container"
      >
        <mock-styled.h1
          classname="el-text-base"
        >
          Developers
        </mock-styled.h1>
        <form>
          <mock-styled.div
            classname="el-mb11"
          >
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="name"
                  type="search"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Developer Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="company"
                  type="search"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Company Name
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="gitHubUsername"
                  type="search"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Github Username
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="registeredFrom"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Registered From
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.input
                  classname=""
                  id="test-static-id"
                  name="registeredTo"
                  type="date"
                />
                <mock-styled.label
                  htmlfor="test-static-id"
                >
                  Registered To
                </mock-styled.label>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div>
              <mock-styled.div>
                <mock-styled.label>
                  Status
                </mock-styled.label>
                <mock-styled.div>
                  <mock-styled.select
                    name="status"
                  >
                    <option
                      value=""
                    >
                      Please Select
                    </option>
                    <option
                      value="incomplete"
                    >
                      Incomplete
                    </option>
                    <option
                      value="pending"
                    >
                      Pending
                    </option>
                    <option
                      value="confirmed"
                    >
                      Confirmed
                    </option>
                    <option
                      value="underReview"
                    >
                      Under Review
                    </option>
                    <option
                      value="removed"
                    >
                      Removed
                    </option>
                  </mock-styled.select>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </form>
        <div
          class="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div
              classname=""
            >
              <mock-styled.button
                classname="el-intent-primary"
                type="button"
              >
                <mock-styled.div />
                Download CSV
              </mock-styled.button>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <div
          class="el-mb11"
        >
          <mock-styled.h2
            classname="el-text-base"
          >
            Total Developers
          </mock-styled.h2>
          <mock-styled.p
            classname="el-text-base el-has-grey-text"
          >
            1
          </mock-styled.p>
          <mock-styled.div
            data-has-call-to-action="false"
            data-has-expandable-action="true"
            data-num-columns-excl-action-col="7"
            role="table"
          >
            <mock-styled.div
              role="row"
            >
              <mock-styled.div
                aria-label="Company Name"
                role="columnheader"
              >
                Company Name
              </mock-styled.div>
              <mock-styled.div
                aria-label="Developer Name"
                role="columnheader"
              >
                Developer Name
              </mock-styled.div>
              <mock-styled.div
                aria-label="Developer Email"
                role="columnheader"
              >
                Developer Email
              </mock-styled.div>
              <mock-styled.div
                aria-label="Job Title"
                role="columnheader"
              >
                Job Title
              </mock-styled.div>
              <mock-styled.div
                aria-label="Account Status"
                role="columnheader"
              >
                Account Status
              </mock-styled.div>
              <mock-styled.div
                aria-label="Created Date"
                role="columnheader"
              >
                Created Date
              </mock-styled.div>
              <mock-styled.div
                aria-label="Agreed Terms Date"
                role="columnheader"
              >
                Agreed Terms Date
              </mock-styled.div>
              <mock-styled.div
                role="columnheader"
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              classname=""
              role="row"
            >
              <mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Company Name"
                  >
                    Reapit Sales
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Developer Name"
                  >
                    Sales Team
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Developer Email"
                  >
                    test@example.com
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Job Title"
                  />
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Account Status"
                  >
                    confirmed
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Created Date"
                  >
                    03 Mar 2022 10:18
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname="el-table-cell-has-dark-text"
                  role="cell"
                >
                  <mock-styled.div
                    data-narrow-label="Agreed Terms Date"
                  >
                    -
                  </mock-styled.div>
                </mock-styled.div>
                <mock-styled.div
                  classname=""
                  role="cell"
                >
                  <mock-styled.span
                    classname="el-intent-default el-icon-new"
                    role="img"
                  >
                    <svg
                      fill="none"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                        fill="currentColor"
                      />
                    </svg>
                  </mock-styled.span>
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                aria-hidden="false"
                classname=""
              >
                <mock-styled.div>
                  <mock-styled.div>
                    <mock-styled.div
                      classname="el-button-group-align-center"
                    >
                      <mock-styled.button
                        classname="el-intent-primary"
                        type="button"
                      >
                        <mock-styled.div />
                        Update Status
                      </mock-styled.button>
                      <mock-styled.button
                        classname="el-intent-primary"
                        type="button"
                      >
                        <mock-styled.div />
                        DevEdition is Free
                      </mock-styled.button>
                      <mock-styled.button
                        classname="el-intent-primary"
                        disabled="false"
                      >
                        <mock-styled.div />
                        Toggle Subscription 
                      </mock-styled.button>
                      <mock-styled.button
                        classname="el-intent-primary"
                      >
                        <mock-styled.div />
                        Invite Member
                      </mock-styled.button>
                      <mock-styled.button
                        classname="el-intent-primary"
                      >
                        <mock-styled.div />
                        Fetch Members
                      </mock-styled.button>
                      <mock-styled.button
                        classname="el-intent-primary"
                      >
                        <mock-styled.div />
                        Fetch Apps
                      </mock-styled.button>
                      <mock-styled.button
                        classname="el-intent-danger"
                        type="button"
                      >
                        <mock-styled.div />
                        Delete Developer
                      </mock-styled.button>
                    </mock-styled.div>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </div>
        <mock-styled.div>
          <mock-styled.button
            aria-label="Previous"
            data-testid="back-button"
            role="button"
            type="button"
          >
            <mock-styled.span
              classname="el-icon-new"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.button>
          <mock-styled.div>
            <mock-styled.input
              value="1"
            />
             of 
            1
          </mock-styled.div>
          <mock-styled.button
            aria-label="Next"
            data-testid="forward-button"
            role="button"
            type="button"
          >
            <mock-styled.span
              classname="el-icon-new"
              role="img"
            >
              <svg
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                  fill="currentColor"
                />
              </svg>
            </mock-styled.span>
          </mock-styled.button>
        </mock-styled.div>
      </section>
    </div>
  </body>,
  "container": <div>
    <mock-styled.div />
    <section
      class="el-page-container"
    >
      <mock-styled.h1
        classname="el-text-base"
      >
        Developers
      </mock-styled.h1>
      <form>
        <mock-styled.div
          classname="el-mb11"
        >
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="name"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Developer Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="company"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Company Name
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="gitHubUsername"
                type="search"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Github Username
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="registeredFrom"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered From
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.input
                classname=""
                id="test-static-id"
                name="registeredTo"
                type="date"
              />
              <mock-styled.label
                htmlfor="test-static-id"
              >
                Registered To
              </mock-styled.label>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div>
            <mock-styled.div>
              <mock-styled.label>
                Status
              </mock-styled.label>
              <mock-styled.div>
                <mock-styled.select
                  name="status"
                >
                  <option
                    value=""
                  >
                    Please Select
                  </option>
                  <option
                    value="incomplete"
                  >
                    Incomplete
                  </option>
                  <option
                    value="pending"
                  >
                    Pending
                  </option>
                  <option
                    value="confirmed"
                  >
                    Confirmed
                  </option>
                  <option
                    value="underReview"
                  >
                    Under Review
                  </option>
                  <option
                    value="removed"
                  >
                    Removed
                  </option>
                </mock-styled.select>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </form>
      <div
        class="el-mb11"
      >
        <mock-styled.div>
          <mock-styled.div
            classname=""
          >
            <mock-styled.button
              classname="el-intent-primary"
              type="button"
            >
              <mock-styled.div />
              Download CSV
            </mock-styled.button>
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <div
        class="el-mb11"
      >
        <mock-styled.h2
          classname="el-text-base"
        >
          Total Developers
        </mock-styled.h2>
        <mock-styled.p
          classname="el-text-base el-has-grey-text"
        >
          1
        </mock-styled.p>
        <mock-styled.div
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="7"
          role="table"
        >
          <mock-styled.div
            role="row"
          >
            <mock-styled.div
              aria-label="Company Name"
              role="columnheader"
            >
              Company Name
            </mock-styled.div>
            <mock-styled.div
              aria-label="Developer Name"
              role="columnheader"
            >
              Developer Name
            </mock-styled.div>
            <mock-styled.div
              aria-label="Developer Email"
              role="columnheader"
            >
              Developer Email
            </mock-styled.div>
            <mock-styled.div
              aria-label="Job Title"
              role="columnheader"
            >
              Job Title
            </mock-styled.div>
            <mock-styled.div
              aria-label="Account Status"
              role="columnheader"
            >
              Account Status
            </mock-styled.div>
            <mock-styled.div
              aria-label="Created Date"
              role="columnheader"
            >
              Created Date
            </mock-styled.div>
            <mock-styled.div
              aria-label="Agreed Terms Date"
              role="columnheader"
            >
              Agreed Terms Date
            </mock-styled.div>
            <mock-styled.div
              role="columnheader"
            >
              <mock-styled.span
                classname="el-intent-default el-icon-new"
                role="img"
              >
                <svg
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                    fill="currentColor"
                  />
                </svg>
              </mock-styled.span>
            </mock-styled.div>
          </mock-styled.div>
          <mock-styled.div
            classname=""
            role="row"
          >
            <mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Company Name"
                >
                  Reapit Sales
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Developer Name"
                >
                  Sales Team
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Developer Email"
                >
                  test@example.com
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Job Title"
                />
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Account Status"
                >
                  confirmed
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Created Date"
                >
                  03 Mar 2022 10:18
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname="el-table-cell-has-dark-text"
                role="cell"
              >
                <mock-styled.div
                  data-narrow-label="Agreed Terms Date"
                >
                  -
                </mock-styled.div>
              </mock-styled.div>
              <mock-styled.div
                classname=""
                role="cell"
              >
                <mock-styled.span
                  classname="el-intent-default el-icon-new"
                  role="img"
                >
                  <svg
                    fill="none"
                    height="1em"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="currentColor"
                    />
                  </svg>
                </mock-styled.span>
              </mock-styled.div>
            </mock-styled.div>
            <mock-styled.div
              aria-hidden="false"
              classname=""
            >
              <mock-styled.div>
                <mock-styled.div>
                  <mock-styled.div
                    classname="el-button-group-align-center"
                  >
                    <mock-styled.button
                      classname="el-intent-primary"
                      type="button"
                    >
                      <mock-styled.div />
                      Update Status
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-primary"
                      type="button"
                    >
                      <mock-styled.div />
                      DevEdition is Free
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-primary"
                      disabled="false"
                    >
                      <mock-styled.div />
                      Toggle Subscription 
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-primary"
                    >
                      <mock-styled.div />
                      Invite Member
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-primary"
                    >
                      <mock-styled.div />
                      Fetch Members
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-primary"
                    >
                      <mock-styled.div />
                      Fetch Apps
                    </mock-styled.button>
                    <mock-styled.button
                      classname="el-intent-danger"
                      type="button"
                    >
                      <mock-styled.div />
                      Delete Developer
                    </mock-styled.button>
                  </mock-styled.div>
                </mock-styled.div>
              </mock-styled.div>
            </mock-styled.div>
          </mock-styled.div>
        </mock-styled.div>
      </div>
      <mock-styled.div>
        <mock-styled.button
          aria-label="Previous"
          data-testid="back-button"
          role="button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.496 20.004a1 1 0 0 1-.71-.29l-6.99-7a1 1 0 0 1 0-1.42l6.99-7a1.002 1.002 0 0 1 1.678.45c.093.347-.006.716-.26.97l-6.291 6.29 6.292 6.29a1 1 0 0 1-.71 1.71"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
        <mock-styled.div>
          <mock-styled.input
            value="1"
          />
           of 
          1
        </mock-styled.div>
        <mock-styled.button
          aria-label="Next"
          data-testid="forward-button"
          role="button"
          type="button"
        >
          <mock-styled.span
            classname="el-icon-new"
            role="img"
          >
            <svg
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.505 20.004a1 1 0 0 1-1.005-1 1 1 0 0 1 .295-.71l6.292-6.29-6.292-6.29a1.005 1.005 0 0 1 0-1.42 1 1 0 0 1 1.419 0l6.99 7a1 1 0 0 1 0 1.42l-6.99 7a1 1 0 0 1-.71.29"
                fill="currentColor"
              />
            </svg>
          </mock-styled.span>
        </mock-styled.button>
      </mock-styled.div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
